all standard api tests passing